[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.24.0"
url = "2"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ordered-float = "4.2.2"

[features]